deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kam
  namespace: kam
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kam
  ports:
    - name: http
      port: 80
      targetPort: http
